--- a/package.json
+++ b/package.json
@@ -3,8 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
+  },
+  "description": "",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/givebat/givebat.to.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/givebat/givebat.to/issues"
+  },
+  "homepage": "https://github.com/givebat/givebat.to#readme",
+  "dependencies": {
+    "is-valid-http-url": "^1.0.3",
+    "next": "^9.1.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   }
 }
